todolist with components:
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/vue-basics/index.html
+++ b/vue-basics/index.html
@@ -20,8 +20,8 @@
     <script>
       const app1 = new Vue({
         el: '#app1',
-        data: {
-          msg: 'Hello World!',
+        data() {
+          return { msg: 'Hello World!', }
         },
         methods: {
           sayHello() {
